<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="6dp"
    android:paddingVertical="6dp">

    <ImageView
        android:visibility="visible"
        android:layout_marginEnd="16dp"
        android:id="@+id/btnAddFavorite"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:src="@drawable/ic_remove_favorite"
        android:textAllCaps="false"
        android:contentDescription="@string/label_add_to_favorite">
    </ImageView>

    <ImageView
        android:src="@drawable/ic_add_favorite"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        android:id="@+id/btnRemoveFavorite"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:contentDescription="@string/label_remove_from_favorite">
    </ImageView>

    <TextView
        android:paddingHorizontal="16dp"
        android:id="@+id/txtSinger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAddFavorite"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/label_singer"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_display_regular">
    </TextView>

    <TextView
        android:paddingHorizontal="16dp"
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAddFavorite"
        app:layout_constraintTop_toBottomOf="@id/txtSinger"
        android:text="@string/label_song_title"
        android:textSize="12sp"
        android:fontFamily="@font/sf_pro_display_light">
    </TextView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ProgressBar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:background="@color/gray_light">
    </View>
</androidx.constraintlayout.widget.ConstraintLayout>