<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_favorite">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/regionWaitingFavorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imgWaiting"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/ic_waiting"
            app:layout_constraintBottom_toTopOf="@id/txtWaiting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </pl.droidsonroids.gif.GifImageView>

        <TextView
            android:id="@+id/txtWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_waiting"
            android:textStyle="italic"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgWaiting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/regionNoResultsFavorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imgNoResults"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/ic_no_results"
            app:layout_constraintBottom_toTopOf="@id/txtNoResults"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </pl.droidsonroids.gif.GifImageView>

        <TextView
            android:id="@+id/txtNoResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_no_results"
            android:textStyle="italic"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgNoResults"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </TextView>

        <TextView
            android:id="@+id/txtTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_try_again"
            android:textStyle="italic"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="16sp"
            android:paddingVertical="4dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:paddingHorizontal="10dp"
            android:background="@drawable/form_edit_text_style_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNoResults"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>